cmake_minimum_required(VERSION 3.23)
project(binary_tree)

set(CMAKE_CXX_STANDARD 20)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)

add_executable(binary_tree                                          binaryTree.h binary_tree.cpp)
add_executable(144_Binary_Tree_Preorder_Traversal                   144_Binary_Tree_Preorder_Traversal.cpp)
add_executable(94_Binary_Tree_Inorder_Traversal                     94_Binary_Tree_Inorder_Traversal.cpp)
add_executable(145_Binary_Tree_Postorder_Traversal                  145_Binary_Tree_Postorder_Traversal.cpp)
add_executable(102_Binary_Tree_Level_Order_Traversal                102_Binary_Tree_Level_Order_Traversal.cpp)
add_executable(107_Binary_Tree_Level_Order_Traversal_II             107_Binary_Tree_Level_Order_Traversal_II.cpp)
add_executable(199_Binary_Tree_Right_Side_View                      199_Binary_Tree_Right_Side_View.cpp)
add_executable(637_Average_of_Levels_in_Binary_Tree                 637_Average_of_Levels_in_Binary_Tree.cpp)
add_executable(429_N-ary_Tree_Level_Order_Traversal                 429_N-ary_Tree_Level_Order_Traversal.cpp)
add_executable(515_Find_Largest_Value_in_Each_Tree_Row              515_Find_Largest_Value_in_Each_Tree_Row.cpp)
add_executable(116_Populating_Next_Right_Pointers_in_Each_Node      116_Populating_Next_Right_Pointers_in_Each_Node.cpp)
add_executable(117_Populating_Next_Right_Pointers_in_Each_Node_II   117_Populating_Next_Right_Pointers_in_Each_Node_II.cpp)
add_executable(104_Maximum_Depth_of_Binary_Tree                     104_Maximum_Depth_of_Binary_Tree.cpp)
add_executable(111_Minimum_Depth_of_Binary_Tree                     111_Minimum_Depth_of_Binary_Tree.cpp)
