cmake_minimum_required(VERSION 3.23)
project(hash_table)

set(CMAKE_CXX_STANDARD 20)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)

add_executable(1_Two_Sum                            1_Two_Sum.cpp)
add_executable(15_3Sum                              15_3Sum.cpp)
add_executable(18_4Sum                              18_4Sum.cpp)
add_executable(202_Happy_Number                     202_Happy_Number.cpp)
add_executable(242_valid_anagram                    242_valid_anagram.cpp)
add_executable(349_Intersection_of_Two_Arrays       349_Intersection_of_Two_Arrays.cpp)
add_executable(383_Ransom_Note                      383_Ransom_Note.cpp)
add_executable(454_4Sum_II                          454_4Sum_II.cpp)