cmake_minimum_required(VERSION 3.23)
project(Stack_and_Queue)

set(CMAKE_CXX_STANDARD 20)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)

add_executable(232_Implement_Queue_using_Stacks                 232_Implement_Queue_using_Stacks.cpp)
add_executable(225_Implement_Stack_using_Queues                 225_Implement_Stack_using_Queues.cpp)
add_executable(20_Valid_Parentheses                             20_Valid_Parentheses.cpp)
add_executable(1047_Remove_All_Adjacent_Duplicates_In_String    1047_Remove_All_Adjacent_Duplicates_In_String.cpp)
add_executable(150_Evaluate_Reverse_Polish_Notation             150_Evaluate_Reverse_Polish_Notation.cpp)
add_executable(239_Sliding_Window_Maximum                       239_Sliding_Window_Maximum.cpp)
add_executable(347_Top_K_Frequent_Elements                      347_Top_K_Frequent_Elements.cpp)
