cmake_minimum_required(VERSION 3.23)
project(string)

set(CMAKE_CXX_STANDARD 20)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)

add_executable(344_Reverse_String                           344_Reverse_String.cpp)
add_executable(541_Reverse_String_II                        541_Reverse_String_II.cpp)
add_executable(Sword_Finger_Offer_05_Replace_spaces         Sword_Finger_Offer_05_Replace_spaces.cpp)
add_executable(151_Reverse_Words_in_a_String                151_Reverse_Words_in_a_String.cpp)
add_executable(Sword_Finger_Offer_58.2_Left_Rotation_String Sword_Finger_Offer_58.2_Left_Rotation_String.cpp)
add_executable(28_Find_the_Index_of_the_First_Occurrence_in_a_String    28_Find_the_Index_of_the_First_Occurrence_in_a_String.cpp)
add_executable(459_Repeated_Substring_Pattern               459_Repeated_Substring_Pattern.cpp)
add_executable(27_Remove_Element                            27_Remove_Element.cpp)
add_executable(206_Reverse_Linked_List                      206_Reverse_Linked_List.cpp)
add_executable(19_Remove_Nth_Node_From_End_of_List          19_Remove_Nth_Node_From_End_of_List.cpp)
add_executable(02_07_Intersection_of_Two_Linked_Lists_LCCI  02_07_Intersection_of_Two_Linked_Lists_LCCI.cpp)
add_executable(142_Linked_List_Cycle_II                     142_Linked_List_Cycle_II.cpp)
add_executable(15_3Sum                                      15_3Sum.cpp)
add_executable(18_4Sum                                      18_4Sum.cpp)